syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Add (CalcRequest) returns (CalcReply);
  rpc Sub (CalcRequest) returns (CalcReply);
  rpc Div (CalcRequest) returns (CalcReply);
  rpc Mul (CalcRequest) returns (CalcReply);
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message CalcRequest {
	float a = 1;
	float b = 2;
	float c = 3;
}

message CalcReply {
	float result = 1;
}